# geobim-busan

./: .env.example  .env.production.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  docker-compose.backend.yml  docker-compose.prod.yml  docker-compose.yml  geobim_boreholes_20260622_create_solids.lsp  git-push.bat  reinstall-all.bat  reinstall-map.bat  start-all.bat  start-backend.bat  stop-all.bat
.claude/: launch.json
backend/: .env.example  Dockerfile.optional  alembic.ini  pyproject.toml
backend/alembic/: README  env.py
backend/alembic/versions/: 0001_postgis_extension.py  0002_initial_tables.py  0003_deduplicate_strata.py  0004_add_is_supplementary.py  0005_project_borehole_overrides.py  0006_borehole_revisions.py  0007_borehole_origin_project_links.py  0008_reclassify_project_upload_links.py  0009_project_virtual_boreholes.py  0010_groundwater_observations.py  0011_project_creation_lifecycle.py  0012_project_kind.py  0013_borehole_survey_name.py  397655860e44_add_stratum_fields.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  deps.py
backend/app/api/v1/: __init__.py  auth.py  boreholes.py  coastal_boundaries.py  coordinates.py  csv_ingestion.py  export.py  pdf_extraction.py  projects.py  rbf.py  templates.py  tiles.py  virtual_boreholes.py  water_surfaces.py
backend/app/core/: __init__.py  config.py  database.py  security.py
backend/app/models/: __init__.py
backend/app/schemas/: __init__.py
backend/app/services/: __init__.py  borehole_dxf.py  borehole_source_layout.py  coastal_land.py  coordinate_service.py  csv_ingest.py  groundwater.py  landxml_export.py  landxml_point_export.py  normalization.py  ocr_provider_service.py  odl_normalizer.py  odl_pdf_service.py  pdf_path_resolver.py  pdf_service.py  phantom_points.py  rbf_interpolation.py  template_service.py  vworld_water.py
backend/app/workers/: __init__.py  pdf_tasks.py
backend/pdf_convert/: README.md
backend/pdf_convert/config/: geo_settings.json
backend/pdf_convert/core/: coordinate_transformer.py  master_hybrid_extractor.py  sentinel_daemon.py  spatial_validator.py  table_merger.py
backend/pdf_convert/parsers/: hwp_indexed_extractor.py  hwpx_converter.py  pdf_parser_odl.py
backend/scripts/: backfill_groundwater_observations.py  classify_legacy_pdf_projects.py  extract_borehole_source_layout.py  generate_db_wiki.py  rebuild_db_from_pdf_storage.py  reextract_csv_soil_detail.py  reextract_soil_detail_subset.py  restore_snapshot_to_current_db.py
backend/seeds/: README.md  dev_seed.py  json_import.py  suwon_import.py
backend/tests/: conftest.py  test_borehole_source_layout.py  test_coastal_land.py  test_csv_ingest.py  test_csv_ingestion_api.py  test_groundwater_legacy.py  test_groundwater_observations.py  test_health.py  test_landxml_export.py  test_project_first_import_workflow.py  test_soil_detail_preservation.py  test_virtual_boreholes.py  test_vworld_water.py
docs/: 3d_section_borehole_projection.md  3d_stratigraphic_rbf_interpolation_tech_spec.md  3d_vertical_section_implementation_plan_20260630.md  ARCHITECTURE.md  CSV_인제스트_가이드.md  DATA_MODEL.md  DB_SAFETY_RUNBOOK.md  (+10 more)
(+174 files in other folders)
