[project]
name = "geobim-stratum-backend"
version = "0.1.0"
description = "GeoBIM Stratum Platform — 시추공 데이터 기반 3D 지층 모델링 백엔드"
readme = "../README.md"
requires-python = ">=3.11,<3.12"
authors = [
    { name = "GeoBIM Team" },
]

# ----------------------------------------------------------------------------
# 의존성
# ----------------------------------------------------------------------------
# 버전 정책: 하한선만 명시하고 uv 가 최신 안정 버전을 선택하도록 한다.
# 정확한 핀 버전은 uv.lock 으로 관리한다.
# ----------------------------------------------------------------------------
dependencies = [
    # ----- 웹 프레임워크 -----
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "python-multipart>=0.0.9",

    # ----- DB / ORM -----
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "psycopg2-binary>=2.9",
    "alembic>=1.13",
    "geoalchemy2>=0.15",

    # ----- 설정 / 검증 -----
    "pydantic>=2.9",
    "pydantic-settings>=2.5",

    # ----- 보안 / 인증 -----
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "bcrypt<4.1",  # passlib 1.7.4는 bcrypt 4.1+와 비호환 (72-byte ValueError)

    # ----- 비동기 작업 -----
    "celery[redis]>=5.4",
    "redis>=5.0",

    # ----- PDF / HWPX 처리 -----
    "pymupdf>=1.24",
    # pyhwpx 는 한컴오피스(HWP) COM 인터페이스 의존 → Windows 전용
    "pyhwpx>=0.45",
    # opendataloader-pdf 는 PDF_Convert 가 의존하는 ODL 검증 라이브러리.
    # 정확한 PyPI 패키지명은 Phase 2 PDF_Convert 통합 시 확인 후 조정.
    # "opendataloader-pdf>=0.1",

    # ----- 외부 호출 -----
    "httpx>=0.27",
    "scipy>=1.12",
    "numpy>=1.26",
    "pyproj>=3.6",
    "shapely>=2.0",
    "pillow>=10.0",
    "email-validator>=2.0",
    "dnspython>=2.0",

    # ----- CSV / XLSX 인제스트 -----
    "openpyxl>=3.1",
]

[project.optional-dependencies]
odl = [
    "opendataloader-pdf>=0.0.0",
]
ocr = [
    "paddleocr>=3.0",
    "paddlepaddle>=3.0",
    "easyocr>=1.7",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
]

# ----------------------------------------------------------------------------
# uv 설정
# ----------------------------------------------------------------------------
[tool.uv]
package = false  # 라이브러리가 아닌 애플리케이션이므로 빌드 안 함

# ----------------------------------------------------------------------------
# Ruff (린트 + 포맷터)
# ----------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]
ignore = ["E501"]  # 라인 길이는 포맷터에 위임

[tool.ruff.format]
quote-style = "double"

# ----------------------------------------------------------------------------
# Pytest
# ----------------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]

# ----------------------------------------------------------------------------
# Mypy
# ----------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
